# AutoFE

./: Airfoil.ipynb  Amazon_employee_access.ipynb  README.md  app.py  applicationFeatureTools.ipynb  bostonHousing.ipynb  diabetes.ipynb  fichierVersSheetResults.txt  germanCredit.ipynb  pyproject.toml  requirements.txt  salary.ipynb  spamBase.ipynb  utilities.py
.streamlit/: config.toml
app/: main.py  utilities.py
data/: german-credit-R.arff
main/Template_TER_IAD-VMI/: main.tex
main/__MACOSX/Template_TER_IAD-VMI/: ._LICENSE  ._Makefile  ._README.md  ._main.tex  ._packages
modules/: data_loading.py  feature_engineering.py  modeling.py  results_analysis.py
notebooks/: Airfoil.ipynb  Amazon_employee_access.ipynb  bigSmartSales.ipynb  bostonHousing.ipynb  diabetes.ipynb  ft_orders_demo_dataset.ipynb  germanCredit.ipynb  salary.ipynb  spamBase.ipynb
