[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.13"
dependencies = [
    "autofeat>=2.1.3",
    "catboost>=1.2.8",
    "featuretools>=1.31.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
    "xgboost>=3.0.1",
]
[tool.poetry]
package-mode = false